user function loaded

--- a/index.html
+++ b/index.html
@@ -16,27 +16,14 @@
       <li><a href="#">Logout</a></li>
     </ul>
   </div>
-
-  <div class="content">
-    <div class="box">
-        <li>Apartment Name</li>
-        <li>Apartment Name</li>
-        <li>Apartment Name</li>
-        <li>Apartment Name</li>
-        <li>Apartment Name</li>
-        <li>Apartment Name</li>
-
+  <div class="container">
+    <div class="nav">
+     Users
     </div>
-    <div class="box">
-        <li>Apartment Name</li>
-        <li>Apartment Name</li>
-        <li>Apartment Name</li>
-        <li>Apartment Name</li>
-        <li>Apartment Name</li>
-        <li>Apartment Name</li>
-        
+    <div class="content js-content">
     </div>
   </div>
+  
   <script src="data.js" type="module"></script>
 </body>
 </html>
