not optimized for mobile devices yet under progress

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
   <div class="container">
     <div class="nav">
-     Users
+     <p class="nav-content">Users</p>
     </div>
     <div class="content js-content">
     </div>
