middle section and top section image done

--- a/index.html
+++ b/index.html
@@ -25,13 +25,46 @@
     <div class="sidebar">
       <div class="top">
         <div>
-          <img src="admin.png">
+          <img src="images/logo.png">
         </div>
         <div>
           Apex Admin
         </div>
       </div>
-      <div>Middle</div>
+      <div class="middle">
+        <div class="middle-components">
+          <div>
+            <img src="overview.png">
+          </div>
+          <div>
+            Overview
+          </div>
+        </div>
+        <div class="middle-components">
+          <div>
+            <img src="apartment.png">
+          </div>
+          <div>
+            Apartment
+          </div>
+        </div>
+        <div class="middle-components">
+          <div>
+            <img src="apartment.png">
+          </div>
+          <div>
+            Users
+          </div>
+        </div>
+        <div class="middle-components">
+          <div>
+            <img src="apartment.png">
+          </div>
+          <div>
+            Analytics
+          </div>
+        </div>
+      </div>
       <div>Bottom</div>
     </div>
     <div class="container">
