--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
       </div>
       <div class="middle">
-        <div class="middle-components">
+        <div class="middle-components hover-effect">
           <div>
             <img src="overview.png">
           </div>
@@ -40,7 +40,7 @@
             Overview
           </div>
         </div>
-        <div class="middle-components">
+        <div class="middle-components hover-effect">
           <div>
             <img src="apartment.png">
           </div>
@@ -48,24 +48,31 @@
             Apartment
           </div>
         </div>
-        <div class="middle-components">
+        <div class="middle-components hover-effect">
           <div>
-            <img src="apartment.png">
+            <img src="users.png">
           </div>
           <div>
             Users
           </div>
         </div>
-        <div class="middle-components">
+        <div class="middle-components hover-effect">
           <div>
-            <img src="apartment.png">
+            <img src="analytics.png">
           </div>
           <div>
             Analytics
           </div>
         </div>
       </div>
-      <div>Bottom</div>
+      <div class="bottom hover-effect">
+          <div>
+            <img src="settings.png">
+          </div>
+          <div>
+            Settings
+          </div>
+      </div>
     </div>
     <div class="container">
       <div class="features js-features">
