admin panel and apartments ui completed

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
       </div>
     </div>
     <div class="container">
+      <h1 class="feature-name">Apartments</h1>
       <div class="features js-features">
-
       </div>
 
     </div>
