--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="home-u.css">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/home-u.css">
   <link rel="stylesheet" href="stylesheets/features/complaint.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,7 +33,7 @@
       <div class="middle">
         <div class="middle-components hover-effect">
           <div>
-            <img src="overview.png">
+            <img src="images/overview.png">
           </div>
           <div>
             Overview
@@ -42,7 +41,7 @@
         </div>
         <div class="middle-components hover-effect">
           <div>
-            <img src="apartment.png">
+            <img src="images/apartment.png">
           </div>
           <div>
             Apartment
@@ -50,7 +49,7 @@
         </div>
         <div class="middle-components hover-effect">
           <div>
-            <img src="users.png">
+            <img src="images/users.png">
           </div>
           <div>
             Users
@@ -58,7 +57,7 @@
         </div>
         <div class="middle-components hover-effect">
           <div>
-            <img src="analytics.png">
+            <img src="images/analytics.png">
           </div>
           <div>
             Analytics
@@ -67,7 +66,7 @@
       </div>
       <div class="bottom hover-effect">
           <div>
-            <img src="settings.png">
+            <img src="images/settings.png">
           </div>
           <div>
             Settings
@@ -81,10 +80,7 @@
 
     </div>
   </div>
-
-
-
-  <script src="admin.js" type="module"></script>
+  <script src="scripts/admin.js" type="module"></script>
 </body>
 
 </html>
