--- a/apartment-details.html
+++ b/apartment-details.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="apartment-details.css">
+    <link rel="stylesheet" href="stylesheets/apartment-details.css">
     <title>Apartment Details</title>
 </head>
 <body>
