authentication card ui done

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="stylesheets/auth.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/home-u.css">
   <link rel="stylesheet" href="stylesheets/features/complaint.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -19,8 +20,14 @@
 </head>
 
 <body>
-
+  
   <div class="main">
+    <div class="auth-card">
+      <h1>Authentication</h1>
+      <input type="text" placeholder="Admin ID">
+      <input type="text" placeholder="Password">
+      <button>Login</button>
+    </div>
     <div class="sidebar">
       <div class="top">
         <div>
