--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="stylesheets/auth.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/home-u.css">
-  <link rel="stylesheet" href="stylesheets/features/complaint.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,12 +20,12 @@
 
 <body>
   
-  <div class="main">
-    <div class="auth-card">
+  <div class="main js-main">
+    <div class="auth-card js-auth-card">
       <h1>Authentication</h1>
-      <input type="text" placeholder="Admin ID">
-      <input type="text" placeholder="Password">
-      <button>Login</button>
+      <input class="js-admin-id" type="text" placeholder="Admin ID">
+      <input class="js-admin-password" type="text" placeholder="Password">
+      <button class="js-login-button">Login</button>
     </div>
     <div class="sidebar">
       <div class="top">
