apartment details page added

--- a/apartment-details.html
+++ b/apartment-details.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheets/apartment-details.css">
     <title>Apartment Details</title>
 </head>
+
 <body>
     <div class="main">
-        <div class="apart">
-            Apart
-        </div>
+        <h1>Apartment Details</h1>
+        <div class="card"></div>
     </div>
+   
 </body>
 </html>
