--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="auth-card js-auth-card">
       <h1>Authentication</h1>
       <input class="js-admin-id" type="text" placeholder="Admin ID">
-      <input class="js-admin-password" type="text" placeholder="Password">
+      <input class="js-admin-password" type="password" placeholder="Password">
       <button class="js-login-button">Login</button>
     </div>
     <div class="sidebar">
