apartment page completed

--- a/apartment-details.html
+++ b/apartment-details.html
@@ -9,10 +9,19 @@
 </head>
 
 <body>
-    <div class="main">
-        <h1>Apartment Details</h1>
-        <div class="card"></div>
+    <div class="main js-main1">
+        <!-- <h1>Apartment Details</h1>
+        <div class="apartment-card js-apartment-card">
+            <p class="full">Dhanlaxmi Apartment</p>
+            <p>Rane Nagar , Nashik , Maharashtra , India</p>
+            <p>422009</p>
+            <p class="mid">No of Flats : 4</p>
+            <p class="mid">No of Residents : 12</p>
+            <p class="mid">No of Shops : 3</p>
+            <p class="mid">Registrant : Ritesh Sanjay Borse</p>
+        </div> -->
     </div>
-   
+    <script src="backend/firebase.js" type="module"></script>
+    <script src="scripts/apartment.js" type="module"></script>
 </body>
 </html>
