--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 
     </div>
   </div>
+  <script src="backend/firebase.js" type="module"></script>
   <script src="scripts/admin.js" type="module"></script>
 </body>
 
