--- a/apartment-details.html
+++ b/apartment-details.html
@@ -5,21 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheets/apartment-details.css">
+    <link rel="stylesheet" href="stylesheets/loader.css">
     <title>Apartment Details</title>
 </head>
 
 <body>
     <div class="main js-main1">
-        <!-- <h1>Apartment Details</h1>
-        <div class="apartment-card js-apartment-card">
-            <p class="full">Dhanlaxmi Apartment</p>
-            <p>Rane Nagar , Nashik , Maharashtra , India</p>
-            <p>422009</p>
-            <p class="mid">No of Flats : 4</p>
-            <p class="mid">No of Residents : 12</p>
-            <p class="mid">No of Shops : 3</p>
-            <p class="mid">Registrant : Ritesh Sanjay Borse</p>
-        </div> -->
+        <div class="loader"></div>
     </div>
     <script src="backend/firebase.js" type="module"></script>
     <script src="scripts/apartment.js" type="module"></script>
