total apartment count and sort by country function created

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
       </div>
       <div class="middle">
-        <div class="middle-components hover-effect">
+        <div class="middle-components hover-effect js-overview-button">
           <div>
             <img src="images/overview.png">
           </div>
@@ -46,7 +46,7 @@
             Overview
           </div>
         </div>
-        <div class="middle-components hover-effect">
+        <div class="middle-components hover-effect js-apartment-button">
           <div>
             <img src="images/apartment.png">
           </div>
@@ -54,7 +54,7 @@
             Apartment
           </div>
         </div>
-        <div class="middle-components hover-effect">
+        <div class="middle-components hover-effect js-user-button">
           <div>
             <img src="images/users.png">
           </div>
@@ -62,7 +62,7 @@
             Users
           </div>
         </div>
-        <div class="middle-components hover-effect">
+        <div class="middle-components hover-effect js-analytics-button">
           <div>
             <img src="images/analytics.png">
           </div>
